# wechatagent

./: .env.e2e  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: README.md  agent-policy.md  ai-agent-system.md  architecture.md  data-and-api.md  development-roadmap.md  frontend-design-system.md  knowledge-wiki.md  product-modules.md  real-task-loop-prompt.md  real-task-runbook.md  sales-positioning-knowledge.md  sunset-plan.md  wechatagent-project-knowledge.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  walkthrough.py
scripts/: _remote_put.py  _remote_run.py  analyze.py  backfill_knowledge_tags.py  check-baseline.ps1  check-baseline.sh  check-evolution-isolation.ps1  check-evolution-isolation.sh  check-no-human-takeover.ps1  check-no-human-takeover.sh  check-no-model-hint.sh  check-no-sales-domain.sh  count.py  list_fns.py  rt-send.sh  rt_send.py  smoke_knowledge_full_loop.py  smoke_knowledge_no_llm.py  smoke_reimport_docs.py  smoke_reimport_split.py  smoke_repair_rejected.py  split_routes.py  stay-awake.ps1
src/: account_scheduler.rs  agent.rs  behavior_signals.rs  cold_contact_worker.rs  config.rs  db.rs  error.rs  lib.rs  llm.rs  main.rs  mcp.rs  models.rs  prompts.rs  routes.rs  secret.rs  silence_signal_worker.rs  supervisor.rs  tasks.rs  webhooks.rs
tests/: account_round_robin_pbt.rs  autonomy_protocol_pbt.proptest-regressions  autonomy_protocol_pbt.rs  behavior_signal_idempotent_pbt.rs  behavior_signal_smoke.rs  chunk_batch_ops.rs  chunk_lock_lifecycle.rs  chunk_type_routing_pbt.rs  cold_reactivation_idempotent_pbt.rs  common_smoke.rs  conversation_mode_decision_schema.rs  debounce_barge_in_run.rs  domain_profile_e2e.rs  dry_run_isolation.rs  evolution_isolation.rs  (+61 more)
(+325 files in other folders)
