[package]
name = "wechatagent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dotenvy = "0.15"
fastrand = "2"
futures = "0.3"
governor = "0.7"
lru = "0.12"
mongodb = "2.8"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4"] }
url = "2"

[dev-dependencies]
mockall = "0.13"
proptest = "1.5"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo"] }
wiremock = "0.6"
